<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PurchaseDetailsActivity">

    <ImageView
        android:id="@+id/activity_purchase_details_banner_image"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/banner_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/activity_purchase_details_banner_text_principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/activity_purchase_details_banner_image"
        app:layout_constraintEnd_toEndOf="@+id/activity_purchase_details_banner_image"
        app:layout_constraintStart_toStartOf="@+id/activity_purchase_details_banner_image"
        app:layout_constraintTop_toTopOf="@+id/activity_purchase_details_banner_image"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/activity_purchase_details_banner_text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_made_successfully"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_purchase_details_banner_image"
        app:layout_constraintEnd_toEndOf="@+id/activity_purchase_details_banner_image"
        app:layout_constraintStart_toStartOf="@+id/activity_purchase_details_banner_image"
        app:layout_constraintTop_toBottomOf="@+id/activity_purchase_details_banner_text_principal" />

    <TextView
        android:id="@+id/activity_purchase_details_check_purchase_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/check_out_the_purchase_summary"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_purchase_details_banner_image" />

    <ImageView
        android:id="@+id/activity_purchase_details_travel_package_image"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/photo_of_local_of_travel_package"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_purchase_details_check_purchase_text"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/activity_purchase_details_travel_package_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_purchase_details_travel_package_image"
        tools:text="São Paulo"/>

    <TextView
        android:id="@+id/activity_purchase_details_travel_package_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/activity_purchase_details_travel_package_local"
        app:layout_constraintTop_toBottomOf="@+id/activity_purchase_details_travel_package_local"
        tools:text="08/12 - 10/12 at 2022" />

    <TextView
        android:id="@+id/activity_purchase_details_travel_package_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/activity_purchase_details_travel_package_duration"
        app:layout_constraintTop_toBottomOf="@+id/activity_purchase_details_travel_package_duration"
        tools:text="$ 1000.00" />

</androidx.constraintlayout.widget.ConstraintLayout>