<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.TravelPackageDetailsActivity">

    <ImageView
        android:id="@+id/activity_travel_package_details_image"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:contentDescription="@string/travel_package_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/activity_travel_package_details_local"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_travel_package_details_image"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/activity_travel_package_details_days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/activity_travel_package_details_local"
        app:layout_constraintTop_toBottomOf="@+id/activity_travel_package_details_local"
        tools:text="2 days" />

    <TextView
        android:id="@+id/activity_travel_package_details_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/activity_travel_package_details_days"
        app:layout_constraintTop_toBottomOf="@+id/activity_travel_package_details_days"
        tools:text="08/12 -10/12 at 2022" />

    <TextView
        android:id="@+id/activity_travel_package_details_final_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_price"
        app:layout_constraintBottom_toTopOf="@+id/activity_travel_package_details_price"
        app:layout_constraintEnd_toEndOf="@+id/activity_travel_package_details_price" />

    <TextView
        android:id="@+id/activity_travel_package_details_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_travel_package_details_duration"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="$ 100.00" />

    <Button
        android:id="@+id/activity_travel_package_details_btn_buy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/buy"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>